--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@
 }
 
 .navi {
-	border: solid 1px #fff;
-	height: 500px;
-	position: absolute;
+	float: right;
+	height: 100vh;
+	position: relative;
 	z-index: 50;
 }
 
