--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 #modal{
-	background-color: rgba(0,0,0,0.75);
+	background-color: rgba(250,250,250,0.75);
 	height: 500px;
 	width: 700px;
 	z-index: 100;
 	position: absolute;
 	display: none;
 }
+
 #main {
 	height: 100%;
 	margin: 0;
@@ -56,5 +57,15 @@
 .item{
 	height: 200px;
 	width: 200px;
+	border:dashed 3px orange;
+	border-radius: 20px;
+	margin: 10px;
 }
 
+.collection{
+	height: 200px;
+	width: 200px;
+	border:dashed 3px orange;
+	border-radius: 20px;
+	margin: 10px;
+}
