--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,17 @@
 	display: none;
 }
 
+#start{
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 60;
+	background-color: green;
+	display: block;
+}
+
 #main {
 	height: 100%;
 	margin: 0;
@@ -68,4 +79,28 @@
 	border:dashed 3px orange;
 	border-radius: 20px;
 	margin: 10px;
+}
+
+.start_image{
+	height: 300px;
+	width: 350px;
+	margin: 10%;
+}
+
+.start_button {
+	height: 100px;
+	width: 200px;
+    font-size: 1.4em;
+    font-weight: bold;
+    padding: 10px 30px;
+    background-color: #248;
+    color: #fff;
+    border-style: none;
+     box-shadow: 2px 2px 3px 1px #666;
+    -moz-box-shadow: 2px 2px 3px 1px #666;
+    -webkit-box-shadow: 2px 2px 3px 1px #666;
+}
+.start_button:hover{
+	background-color: #24d;
+	color: #fff;
 }
