--- a/css/kabotya.css
+++ b/css/kabotya.css
@@ -1,16 +1,22 @@
+.modal_kabotya{
+	background-color: rgba(250,250,250,0.75);
+	height: 500px;
+	width: 700px;
+	z-index: 100;
+	position: absolute;
+	display: none;
+}
 
-
-.modal_kabotya_contents {
+.kabotya_map_contents {
 	height: 400px;
 	text-align: center;
 	width: 700px;
 }
 
-.modal_kabotya_contents img {
+.kabotya_map_contents img {
 	height: 400px;
 	width: 650px;
 }
-
 
 .button_map {
 	height: 100px;
