--- a/templates/kabotya_map.html
+++ b/templates/kabotya_map.html
@@ -1,4 +1,8 @@
 <div class="kabotya_map">
+
+	<div class="map_location">
+		<img src="images/collection/item-konko.png" class="location_point" />
+	</div>
 	<div class="kabotya_map_contents">
 		<img src="images/map.png"/>
 	</div>
