--- a/css/kabotya.css
+++ b/css/kabotya.css
@@ -13,6 +13,19 @@
 	width: 700px;
 }
 
+.map_location {
+	height: 400px;
+	position: absolute;
+	width: 700px;
+	z-index:200;
+}
+
+.location_point {
+	height: 50px;
+	right: 500px;
+	width: 50px;
+}
+
 .kabotya_map_contents img {
 	height: 400px;
 	width: 650px;
