--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@
 }
 
 .item{
+	pointer-events: none;
 	height: 200px;
 	width: 200px;
 	border:dashed 3px orange;
@@ -82,6 +83,7 @@
 }
 
 .collection{
+	pointer-events: none;
 	height: 200px;
 	width: 200px;
 	border:dashed 3px orange;
