--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@
 }
 
 .item{
-	/*pointer-events: none;*/
+	pointer-events: none;
 	height: 200px;
 	width: 200px;
 	border:dashed 3px orange;
@@ -124,22 +124,31 @@
 }
 
 .kwsk_header img{
+	margin-top:35px; 
+	margin-left: 10px;
 	float: left;
 	height: 330px;
 	width: 330px;
-	border:1px solid orange; 
+	/*border:1px solid orange; */
 }
 
 .kwsk_text{
-	/*margin:10px 5px 10px;*/
+	margin-top:30px; 
+	margin-right: 5px;
+	height: 300px;
+	width: 320px;
 	padding: 1em;
 	border: 3px solid #ccc;
 	border-radius: 3em .7em 2em .7em/.7em 2em .7em 3em;	
-	clear: left;
+	font-family:"ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
+	float: right;
 }
 
 .kwsk_menu{
-	font-weight:bold; 
+	clear: both;
+	margin-top: 7em;
+	margin-left:23em;
+	font-weight:bold;
 	height: 50px;
 	width: 100px;
 
