--- a/templates/kabotya_goal.html
+++ b/templates/kabotya_goal.html
@@ -1,5 +1,7 @@
 <div class="kabotya_goal">
-	<div class="goal_main"></div>
+	<div class="goal_main">
+		
+	</div>
 	<div class="goal_menu">
 		<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" onclick="gameContinue()">こんてぃにゅー</button>
 	</div>
