--- a/templates/kabotya_goal.html
+++ b/templates/kabotya_goal.html
@@ -1,5 +1,14 @@
 <div class="kabotya_goal">
 	<div class="goal_main">
+		<div class="goal_header">
+			<img src="templates/text_goal.png">
+		</div>
+		
+		<div class="goal_body">
+			<p class="goal_text">何周目</p>
+			<p class="goal_text">スポット</p>
+			<p class="goal_text">アイテム</p>
+		</div>
 		
 	</div>
 	<div class="goal_menu">
