--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 }
 
 .mass {
-	background-image: url("../images/kumo-illust6.png");
+	background-image: url("../images/cloud.png");
 	background-repeat: no-repeat;
 	background-size: 50%;
 	position: relative;
