ゴール画面を少し更新

--- a/templates/kabotya_goal.html
+++ b/templates/kabotya_goal.html
@@ -5,9 +5,10 @@
 		</div>
 		
 		<div class="goal_body">
-			<p class="goal_text">何周目</p>
-			<p class="goal_text">スポット</p>
-			<p class="goal_text">アイテム</p>
+			<p class="goal_round">何周目</p>
+			<p class="spotCount">スポット /10カ所中</p>
+			<p class="itemCount">アイテム </p>
+			<p class="collectionCount">コレクション </p>
 		</div>
 		
 	</div>
