--- a/css/kabotya.css
+++ b/css/kabotya.css
@@ -99,16 +99,18 @@
 	margin-top: 10px;
 }
 
-.goal_body{
+.goal_body {
 	border: solid 1px #000; 
 	height: 235px;
 	width: 370px;
 	margin: 20px 165px;
 }
 
-.goal_text{
+.goal_body p{
 	font-size: 20px;
-	margin: 40px 140px;
+	margin: 30px 90px;
+	width: 196px;
+	text-align: center;
 }
 
 .button_map {
