--- a/css/kabotya.css
+++ b/css/kabotya.css
@@ -49,13 +49,14 @@
 
 .spot_contents_text {
 	background-color: #eaeaff;
-	border: double 10px #ffc993;
-	border-radius: 30px;
+	border: solid 3px #ffc993;
+	border-radius: 3em .7em 2em .7em/.7em 2em .7em 3em;	
 	height: 50px;
 	margin: 10px auto;
 	overflow: hidden;
 	padding: 10px;
 	width: 650px;
+	font-size: 14px;
 }
 
 .event_contents {
@@ -77,13 +78,14 @@
 
 .event_contents_text {
 	background-color: #eaeaff;
-	border: double 10px #ffc993;
-	border-radius: 30px;
+	border: solid 3px #ffc993;
+	border-radius: 3em .7em 2em .7em/.7em 2em .7em 3em;	
 	height: 50px;
 	margin: 10px auto;
 	overflow: hidden;
 	padding: 10px;
 	width: 650px;
+	font-size: 18px;
 }
 
 .goal_main {
@@ -116,4 +118,5 @@
 .button_map {
 	height: 100px;
 	width: 100px;
+	margin: 42px 50px;
 }
