--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,14 @@
 .button {
 	height: 100px;
 	width: 100px;
+	margin: -50px 50px;
+
 }
 
 #mato {
 	height: 200px;
 	width: 200px;
+	margin: -40px 0px;
 }
 
 .item{
@@ -138,20 +141,27 @@
 	height: 300px;
 	width: 320px;
 	padding: 1em;
-	border: 3px solid #ccc;
+	border: 3px solid #ffc993;
 	border-radius: 3em .7em 2em .7em/.7em 2em .7em 3em;	
 	font-family:"ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
 	float: right;
 }
 
+.kwsk_text p{
+	font-size: 25px;
+	margin: 8px;
+	/*text-align: center;*/
+}
+
 .kwsk_menu{
 	clear: both;
-	margin-top: 7em;
-	margin-left:23em;
+	margin-top: 6em;
+	margin-left:49em;
 	font-weight:bold;
 	height: 50px;
 	width: 100px;
-
+	font-size: 12px;
+	background-color: rgb(178,255,89);
 	}
 
     
