--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,22 @@
 }
 
 #start{
+	background-color: green;
 	height: 100%;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 	position: absolute;
-	width: 100%;
 	z-index: 60;
-	background-color: green;
 	display: block;
 }
 
 #main {
 	height: 100%;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 	position: absolute;
-	width: 100%;
 	z-index: 0;
 }
 
@@ -39,13 +39,13 @@
 	background-image: url("../images/cloud.png");
 	background-repeat: no-repeat;
 	background-size: 50%;
-	position: relative;
 	width: 300px;
-	z-index: 50;
 	margin-left:2em; 
 	padding-top:4.5em;
 	padding-left: 1.6em;
 	padding-bottom: 4em;
+	position: relative;
+	z-index: 50;
 	font-weight: bolder;
 	font-family:"ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
 }
@@ -53,8 +53,8 @@
 .navi {
 	bottom: 0%;
 	height: 80vh;
-	position: absolute;
 	right: 10px;
+	position: absolute;
 	z-index: 50;
 }
 
@@ -77,19 +77,19 @@
 
 .item{
 	pointer-events: none;
-	height: 200px;
-	width: 200px;
 	border:dashed 3px orange;
 	border-radius: 20px;
+	height: 200px;
+	width: 200px;
 	margin: 10px;
 }
 
 .collection{
 	pointer-events: none;
-	height: 200px;
-	width: 200px;
 	border:dashed 3px orange;
 	border-radius: 20px;
+	height: 200px;
+	width: 200px;
 	margin: 10px;
 }
 
@@ -100,24 +100,22 @@
 }
 
 .start_button {
+    background-color: #248;
+    border-style: none;
+    box-shadow: 2px 2px 3px 1px #666;
 	height: 100px;
 	width: 200px;
+    color: #fff;
+    padding: 10px 30px;
     font-size: 1.4em;
     font-weight: bold;
-    padding: 10px 30px;
-    background-color: #248;
-    color: #fff;
-    border-style: none;
-     box-shadow: 2px 2px 3px 1px #666;
-    -moz-box-shadow: 2px 2px 3px 1px #666;
-    -webkit-box-shadow: 2px 2px 3px 1px #666;
 }
 .start_button:hover{
 	background-color: #24d;
 	color: #fff;
 }
 
-.kwsk{
+.detail{
 	background-color: rgba(250,250,250,0.75);
 	height: 500px;
 	width: 700px;
@@ -126,42 +124,40 @@
 	display: none;
 }
 
-.kwsk_header img{
+.detail_header img{
+	height: 330px;
+	width: 330px;
 	margin-top:35px; 
 	margin-left: 10px;
 	float: left;
-	height: 330px;
-	width: 330px;
-	/*border:1px solid orange; */
 }
 
-.kwsk_text{
-	margin-top:30px; 
-	margin-right: 5px;
-	height: 300px;
-	width: 320px;
-	padding: 1em;
+.detail_text{
 	border: 3px solid #ffc993;
 	border-radius: 3em .7em 2em .7em/.7em 2em .7em 3em;	
+	height: 300px;
+	width: 320px;
+	margin-top:30px; 
+	margin-right: 5px;
+	padding: 1em;
 	font-family:"ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
 	float: right;
 }
 
-.kwsk_text p{
+.detail_text p{
 	font-size: 25px;
 	margin: 8px;
-	/*text-align: center;*/
 }
 
-.kwsk_menu{
+.detail_close{
+	background-color: rgb(178,255,89);
+	height: 50px;
+	width: 100px;
 	clear: both;
 	margin-top: 6em;
 	margin-left:49em;
 	font-weight:bold;
-	height: 50px;
-	width: 100px;
 	font-size: 12px;
-	background-color: rgb(178,255,89);
 	}
 
     .mdl-button--accent.mdl-button--accent.mdl-button--raised, .mdl-button--accent.mdl-button--accent.mdl-button--fab{
